--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,23 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.4.0'
+    id 'org.springframework.boot' version '2.5.2'
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
-}
-
-repositories {
-    jcenter()
-    mavenLocal()
-}
-
-ext {
-    springBootVersion = '2.4.0'
-    commonsLang3Version = '3.4'
-    mySQLConnectorVersion = '5.1.44'
-    junitVersion = '4.12'
-    baatCoreVersion = '1.0'
 }
 
 sourceCompatibility = 1.15
 targetCompatibility = 1.15
+
+repositories {
+    mavenCentral()
+    mavenLocal()
+}
+
+ext {
+    springBootVersion = '2.5.2'
+    commonsLang3Version = '3.4'
+    junitVersion = '4.12'
+    baatCoreVersion = '1.0'
+}
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-dependencies:${project.springBootVersion}"
@@ -30,30 +29,9 @@ dependencies {
 
     testImplementation "org.springframework.boot:spring-boot-starter-test:${project.springBootVersion}"
     testImplementation "junit:junit:${project.junitVersion}"
-
-    components {
-        withModule('org.springframework:spring-beans') {
-            allVariants {
-                withDependencyConstraints {
-                    // Need to patch constraints because snakeyaml is an optional dependency
-                    it.findAll { it.name == 'snakeyaml' }.each { it.version { strictly '1.19' } }
-                }
-            }
-        }
-    }
 }
 
-buildScan {
-
-    // always accept the terms of service
-    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-    termsOfServiceAgree = 'yes'
-
-    // always publish a build scan
-    publishAlways()
-}
-
-bootJar {
-    mainClassName = 'org.baat.websockets.application.WSApplication'
+test {
+    useJUnitPlatform()
 }
 
